fix navbar position on small screens

--- a/src/components/NavbarResponsive.css
+++ b/src/components/NavbarResponsive.css
@@ -7,7 +7,8 @@
     width: 70%;
     color: #ffffff;
     z-index: 200;
-    position: absolute;
+    position: fixed;
+    top: 0;
     transition: all 0.5s;
     backdrop-filter: blur(12px);
 
@@ -21,7 +22,8 @@
     color: #ffffff;
     height: 100vh;
     width: 100%;
-    position: absolute;
+    position: fixed;
+    top: 0;
     transform: translateX(-100%);
     transition: all 0.5s;
     backdrop-filter: blur(12px);
